azureps-cmdlets-docs/ResourceManager/AzureRM.SiteRecovery/v3.1.0/Update-AzureRmSiteRecoveryServicesProvider.md
---
external help file: Microsoft.Azure.Commands.SiteRecovery.dll-Help.xml
online version: 77fe5864-b5c5-46f4-857d-458cd9502539
schema: 2.0.0
ms.assetid: 1510BDEC-B0F2-4F87-9B3C-4DB6F38684B2
---

# Update-AzureRmSiteRecoveryServicesProvider

## SYNOPSIS
Updates the information received from the Azure Site Recovery Services Provider.

## SYNTAX

```
Update-AzureRmSiteRecoveryServicesProvider -ServicesProvider <ASRRecoveryServicesProvider> [<CommonParameters>]
```

## DESCRIPTION
The **Update-AzureRmSiteRecoveryServicesProvider** cmdlet updates the information received from the Azure Site Recovery Services Provider.
You can use this cmdlet to trigger a refresh of the information received from the Recovery Services Provider.

## EXAMPLES

### 1:
```

```

## PARAMETERS

### -ServicesProvider
Specifies the Azure Site Recovery Services Provider object.

```yaml
Type: ASRRecoveryServicesProvider
Parameter Sets: (All)
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[Get-AzureRmSiteRecoveryServicesProvider](.\Get-AzureRmSiteRecoveryServicesProvider.md)

[Remove-AzureRmSiteRecoveryServicesProvider](.\Remove-AzureRmSiteRecoveryServicesProvider.md)


